fix line-height and add flex wrap to wrapper

--- a/src/components/Details/Chart/Chart.css
+++ b/src/components/Details/Chart/Chart.css
@@ -5,7 +5,6 @@
   width: max-content;
   border: 1px solid #000;
   border-right: 0;
-  margin-top: .5em;
 }
 
 .chart button {
@@ -27,15 +26,10 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.5em;
+  gap: 1em;
+  flex-wrap: wrap;
 }
 
 .chart button.active {
   background-color: rgb(188, 188, 188);
-}
-
-
-@media only screen and (max-width: 600px) {
-  .chart-wrapper {
-    flex-direction: column;
-  }
 }
