--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -14,6 +14,11 @@
   margin: 0.1em 0 0;
 }
 
+h1,
+h2 {
+  line-height: 1.2em;
+}
+
 h2 {
   margin: 0 0 0.5em;
 }
